--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start1": "nodemon app.js"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/elements": "^2.4.2",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "nodemon": "^3.1.10",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-confirmation-code-field": "^8.0.1",
@@ -52,5 +61,19 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "description": "This is a new [**React Native**](https://reactnative.dev) project, bootstrapped using [`@react-native-community/cli`](https://github.com/react-native-community/cli).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MuhammadMushtaq10/ReactNativeIntern.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/MuhammadMushtaq10/ReactNativeIntern/issues"
+  },
+  "homepage": "https://github.com/MuhammadMushtaq10/ReactNativeIntern#readme"
 }
